Position icons and fix z-index

--- a/src/components/widgets/location-widget/location-widget.module.scss
+++ b/src/components/widgets/location-widget/location-widget.module.scss
@@ -4,7 +4,7 @@
 
 .locationButton {
   @extend .uiRight;
-  top: 142px;
+  top: 146px;
   align-items: center;
   background-color: $elephant;
   border-radius: 2px;
