--- a/src/components/widgets/settings-widget/settings-widget.module.scss
+++ b/src/components/widgets/settings-widget/settings-widget.module.scss
@@ -4,8 +4,9 @@
 
 .settingsButton {
   @extend .uiRight;
-  top: 20px;
+  top: 38px;
   align-items: center;
+  justify-content: center;
   background-color: $elephant;
   border-radius: 2px;
   display: flex;
@@ -24,7 +25,7 @@
 
 .settingsTooltip {
   position: absolute;
-  top: 10px;
+  top: 38px;
   right: 50px;
   background-color: $elephant;
   width: 230px;
