--- a/src/components/widgets/toggle-ui-widget/toggle-ui-widget.module.scss
+++ b/src/components/widgets/toggle-ui-widget/toggle-ui-widget.module.scss
@@ -4,7 +4,7 @@
 
 .toggleButton {
   @extend .uiRight;
-  top: 40px;
+  top: 0;
   align-items: center;
   background-color: $elephant;
   border-radius: 2px;
